[package]
name = "typhoondsl-outliner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustemo = { version = "0.1.0", path = "../../../rust/rustemo/rustemo" }
regex = "1"
colored = "2"
lazy_static = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.2.7", features = ["derive"] }

[dev-dependencies]
# For output_cmp for testing
rustemo-compiler = { version = "0.1.0", path = "../../../rust/rustemo/rustemo-compiler" }
rstest = "0.17.0"
